--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".BattleDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ManageUserActivity"
             android:exported="false" />
         <activity
